# Study

./: .gitignore  LICENSE  readme.md  rm-CMakeLists-txt-user.sh
C/FullCircle/c-fibonacci/: CMakeLists.txt  main.c
C/gtk3/myosc/: MyOsc  makefile  myosc  myosc.c  osc.c  osc.diff
C/gtk3/old/: myosc.c
Cpp/: .clang-format
Cpp/2022_02_15_create_directory/: CMakeLists.txt  main.cpp
Cpp/C++20/use-std-span/: CMakeLists.txt
Cpp/C++Primer/chap02/: exercise_02_03  exercise_02_03.cpp  sizeof  sizeof.cpp
Cpp/C++Primer/chap10/: exercise_10_01  exercise_10_01.cpp  exercise_10_02  exercise_10_02.cpp  exercise_10_11  exercise_10_11.cpp
Cpp/Coursera/001_sum/: CMakeLists.txt  main.cpp
Cpp/Coursera/002_min_string/: CMakeLists.txt
Cpp/Coursera/003_equation/: CMakeLists.txt  main.cpp
Cpp/Coursera/005_discount/: CMakeLists.txt
Cpp/Coursera/006_even_numbers/: CMakeLists.txt
Cpp/Coursera/007_second_occurrence/: CMakeLists.txt
Cpp/Coursera/008_greatest_common_divisor/: main.cpp
Cpp/Coursera/009_binary_number/: CMakeLists.txt
Cpp/Coursera/010_factorial/: CMakeLists.txt  main.cpp
Cpp/Coursera/011_palindrom/: CMakeLists.txt  main.cpp
Cpp/Coursera/012_palindrom_filter/: main.cpp
Cpp/Coursera/015_reverse/: main.cpp
Cpp/Coursera/016_reversed/: CMakeLists.txt  main.cpp
Cpp/Coursera/018_worry_queue/: main.cpp
Cpp/Coursera/019_monthly_affairs/: main.cpp
Cpp/Coursera/020_anagrams/: main.cpp
Cpp/Coursera/021_directory_of_capitals/: main.cpp
Cpp/Coursera/022_bus_stop/: CMakeLists.txt
Cpp/Coursera/023_bus_stop_2/: CMakeLists.txt
Cpp/Coursera/024_number_of_unique_strings/: CMakeLists.txt
Cpp/Coursera/025_lots_of_vocabulary_meanings/: CMakeLists.txt  main.cpp
Cpp/Coursera/026_synonyms/: CMakeLists.txt  main.cpp
Cpp/Coursera/028_sorting_integers_modulo/: CMakeLists.txt  main.cpp
Cpp/Coursera/029-case-insensitive-sort/: CMakeLists.txt
Cpp/Coursera/030_sorted_strings/: CMakeLists.txt  main.cpp
Cpp/Coursera/031_first_name_and_last_name/: CMakeLists.txt
Cpp/Coursera/032_first_name_and_last_name_2/: CMakeLists.txt  main.cpp
Cpp/Coursera/033_reversible_string/: main.cpp
Cpp/Coursera/034_first_name_and_last_name_3/: CMakeLists.txt
Cpp/Coursera/035_incognizable/: CMakeLists.txt  main.cpp
Cpp/Coursera/036_struct_lecture_title/: CMakeLists.txt
Cpp/Coursera/037_study_function_and_function_part/: main.cpp
Cpp/Coursera/038_reversible_function_2/: CMakeLists.txt  main.cpp
Cpp/Coursera/039_work_with_text_file_1/: CMakeLists.txt  main.cpp
Cpp/Coursera/040_work_with_text_file_2/: CMakeLists.txt  main.cpp
Cpp/Coursera/041_output_with_precision/: CMakeLists.txt  main.cpp
Cpp/Coursera/042_Reading_and_output_table/: CMakeLists.txt  main.cpp
Cpp/Coursera/043_list_of_student/: CMakeLists.txt
Cpp/Coursera/044_rational_interface/: CMakeLists.txt
Cpp/Coursera/045_rational_eq_add_sub/: CMakeLists.txt
Cpp/Coursera/046_rational_mult_div/: CMakeLists.txt  main.cpp
Cpp/Coursera/050_rational_throw/: CMakeLists.txt  main.cpp
Cpp/Coursera/051_fraction_calculator/: CMakeLists.txt
Cpp/Coursera/052_work_with_time_server/: main.cpp
Cpp/Coursera/053_calendar/: CMakeLists.txt  main.cpp  solution.cpp
Cpp/Coursera/101_matrix_sum/: main.cpp  solution.cpp
Cpp/Coursera/102_average_temperature_2/: main.cpp
Cpp/Coursera/103_block_mass/: main.cpp  solution.cpp
Cpp/Coursera/ModernCpp/02_yellow/008_decomposition/: CMakeLists.txt  input.cpp  main.cpp  original.cpp
Cpp/Study/: temp.cpp  temp3.cpp  temp4.cpp  temp5.cpp  temp6.cpp
Cpp/Study/use_sqlite3/: CMakeLists.txt  main.cpp
Cpp/test/cpp20/: CMakeLists.txt  main.cpp
Jupyter/Python/: ya_lesson_01_algorithms.ipynb
Projects/sfml-game/: .clang-format  makefile  map.h  player.h  view.h
Projects/xml2json/: CMakeLists.txt  main.cpp
Qt6/: .clang-format  .gitignore
Qt6/Others/: Qt5Allclasses.txt  Qt6AllClasses.txt
clang-format/: .clang-format  first.clang-format
(+612 files in other folders)
